fix typo. add cmake check for wiringPi header

--- a/led-blink/cpp/CMakeLists.txt
+++ b/led-blink/cpp/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+include(CheckIncludeFile)
+check_include_file("wiringPi.h" HAVE_WIRING_PI_H)
+if(NOT HAVE_WIRING_PI_H)
+    message( FATAL_ERROR "wiringPi library not found!" )
+endif()
+
 project(LED-Blink)
 
 add_executable(led-blink main.cpp)
